@@ -1,3 +1,8 @@
+2012-01-18  Paul Pluzhnikov  <ppluzhnikov@google.com>
+
+	PR gdb/9538
+	* gdb.base/sepdebug.exp: New test.
+
 2012-01-18  Pedro Alves  <palves@redhat.com>
 
 	* gdb.ada/mi_task_info.exp (-ada-task-info with no argument):
