@@ -1,3 +1,14 @@
+2012-01-18  Paul Pluzhnikov  <ppluzhnikov@google.com>
+	    Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	PR gdb/9538
+	* symfile.c (find_separate_debug_file): New function.
+	(terminate_after_last_dir_separator): Likewise.
+	(find_separate_debug_file_by_debuglink): Also try realpath.
+	* configure.ac (AC_CHECK_FUNCS): Add lstat.
+	* configure: Regenerate.
+	* config.in: Regenerate.
+
 2012-01-18  Doug Evans  <dje@google.com>
 
 	* Makefile.in (TARGET_SYSTEM_ROOT, TARGET_SYSTEM_ROOT_DEFINE): Delete.
